--- a/.travis.yml
+++ b/.travis.yml
@@ -2,5 +2,8 @@ language: php
 
 php: [5.3, 5.4, 5.5]
 
-before_script: make install
+before_script:
+ - php -r "eval('?>'.file_get_contents('https://getcomposer.org/installer'));"
+ - composer.phar install --dev
+
 script: make tests
