--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -6,5 +6,17 @@
             <directory suffix="Test.php">./test</directory>
         </testsuite>
 
+
     </testsuites>
+
+    <!-- Coverage filter -->
+    <filter>
+        <whitelist>
+            <directory>./</directory>
+            <exclude>
+                <directory>./test</directory>
+                <directory>./vendor</directory>
+            </exclude>
+        </whitelist>
+    </filter>
 </phpunit>
